_sass/components.scss
/* ... */
#gallery-modal {
  .close-gallery-modal {
    position: absolute;
    top: 1.5rem;
    right: 2rem;
    background: transparent;
    border: none;
    cursor: pointer;

    img {
      width: 32px;
    }
  }

  #gallery-modal-content {
    text-align: center;
    margin: 5rem auto 0;
    padding: 0 2rem;

    img {
      max-width: 100%;
      border-radius: 0.25rem;
      box-shadow: 0 0 12px rgba(0, 0, 0, 0.8);
    }
  }
}

.btn {
  color: $white-color;
  font-size: 0.75rem;
  position: relative;
  font-family: $default-font-family;
  font-weight: bold;
  text-transform: uppercase;
  display: inline-block;
  align-items: center;
  justify-content: center;
  padding: 0.625rem 1.25rem 0.375rem;
  cursor: pointer;
  transition: ease $transition-time;
  transition-property: background-color transform box-shadow;
  background: transparent;
  border-style: solid;
  border-width: 1px;
  border-radius: 2px;

  &.animete-hover-icon-right svg {
    transform: translate(0, 1px);
    transition: ease $transition-time transform;
  }

  &.animete-hover-icon-right:hover svg {
    transform: translate(5px, 1px);
  }

  &.large {
    font-size: 15px;
    border-width: 2px;
    padding: 1rem 1.625rem 0.625rem;
  }

  &:hover {
    color: $white-color;
    border-color: $primary-color;
    background-color: $primary-color;
  }

  &.primary {
    color: $body-color;
    border-color: $white-color;
    background-color: $white-color;

    &:hover {
      color: $body-color;
      border-color: $primary-color;
      background-color: $primary-color;
    }
  }
}

.videos-x-list {
  display: grid;
  column-gap: 1rem;
  row-gap: 1rem;
  grid-template-columns: repeat(auto-fit, 230px);

  .video-item {
    position: relative;
    height: 350px;
    overflow: hidden;
    transition: all ease $transition-time;

    img {
      width: 100%;
      height: 100%;
      object-fit: cover;
      position: absolute;
      top: 0;
      left: 0;
    }

    &:hover {
      box-shadow: 0 0 0.625rem 5px rgba(0, 0, 0, 0.15);
    }

    h3 {
      color: $white-color;
      line-height: 30px;
      width: calc(100% - 2rem);
      font-size: 1.5rem;
      position: absolute;
      bottom: 1rem;
      left: 1rem;
    }
  }
}

.heading {
  text-align: center;
  margin-bottom: 4.375rem;

  h1 {
    padding-top: 6rem;
  }

  p {
    font-size: 1.125rem;
  }
}

.ig-thumbs {
  display: grid;
  gap: 0.5rem;
  grid-template-columns: repeat(auto-fit, minmax(230px, 1fr));

  a {
    position: relative;
    display: block;

    &::after {
      content: "";
      width: 100%;
      height: 100%;
      position: absolute;
      top: 0;
      left: 0;
      background: url("../img/icons/ig.svg") no-repeat #000000 center center;
      background-size: 48px;
      border-radius: $box-radius;
      opacity: 0;
      transition: all ease $transition-time;
    }

    &:hover::after {
      opacity: 0.5;
    }

    img {
      width: 100%;
      display: block;
    }
  }
}

.frame-video-container {
  background-color: $video-bg-color;

  .full-video-frame {
    position: relative;
    padding-bottom: 56.25%; /* 16:9 */

    iframe,
    object,
    embed {
      position: absolute;
      top: 0;
      left: 0;
      width: 100%;
      height: 100%;
    }
  }

  @media (max-width: 500px) {
    padding-top: 95px;
  }
}

.single-video-container {
  max-height: 100vh;

  @media screen and (min-width: $max-width-container) {
    margin-left: 100px;
    margin-right: 100px;
  }
}

.photo-topics {
  display: grid;
  grid-template-columns: 1fr 1fr;
  align-items: center;
  column-gap: 2rem;

  @media screen and (max-width: 660px) {
    grid-template-columns: 1fr;

    .photo {
      margin-bottom: 1rem;
    }

    .photo-legend {
      order: 1;
    }
  }

  figure {
    width: 100%;
  }
}

.photo {
  position: relative;

  & > img {
    width: 100%;
    display: block;
    object-fit: cover;
    border-radius: 2px;
  }

  .btn-img-full-screen {
    width: 32px;
    height: 32px;
    display: flex;
    align-items: center;
    justify-content: center;
    position: absolute;
    bottom: 12px;
    right: 12px;
    appearance: none;
    background-color: rgba(0, 0, 0, 0.5);
    border: none;
    border-radius: 0.375rem;
    cursor: pointer;
  }
}

.photo-gallery {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  gap: 0.5rem;
  padding: 0;

  figure {
    overflow: hidden;
    display: flex;

    &:hover {
      transition: ease-out all 350ms;
      box-shadow: 2px 2px 8px 2px rgba(0, 0, 0, 0.5);
    }
  }

  figure:hover img {
    transform: scale(1.025);
  }

  img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    display: block;
    transition: ease-out all 350ms;
    transform: scale(1);
  }

  @media screen and (max-width: 650px) {
    display: block;

    .figure {
      margin-bottom: 1rem;
    }
  }
}

.video-section {
  height: 100vh;
  display: flex;
  text-align: center;
  background-repeat: no-repeat;
  background-position: center;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  background-size: cover;
  background-attachment: fixed;

  &.garage1 {
    background-image: url("../img/bg/garage.jpg");
  }

  &.garage2 {
    background-image: url("../img/bg/garage2.jpg");
  }

  &.garage3 {
    background-image: url("../img/bg/garage3.jpg");
  }

  &.garage4 {
    background-image: url("../img/bg/garage4.jpg");
  }

  &.garage5 {
    background-image: url("../img/bg/garage5.jpg");
  }

  &.food1 {
    background-image: url("../img/bg/food.jpg");
  }

  &.food2 {
    background-image: url("../img/bg/food2.jpg");
  }

  &.food3 {
    background-image: url("../img/bg/food3.jpg");
  }

  &.food4 {
    background-image: url("../img/bg/food4.jpg");
  }

  &.food5 {
    background-image: url("../img/bg/food5.jpg");
  }

  .video-section-video {
    width: 100%;
    max-width: 800px;
    margin: 0 auto;
    box-shadow: 0 0 2rem 1rem rgba(0, 0, 0, 0.5);
  }
}
/* ... */

